force-app/main/default/objects/Cycle_Event__c/fields/Warming_Thaw_Kit_Used__c.field-meta.xml
<CustomField>
    <fullName>Warming_Thaw_Kit_Used__c</fullName>
    <label>Warming/Thaw Kit Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rapid Warm Blast</fullName>
                <default>true</default>
                <label>Rapid Warm Blast</label>
            </value>
            <value>
                <fullName>Rapid Warm Cleave</fullName>
            </value>
            <value>
                <fullName>Sage Vit Warm Kit</fullName>
            </value>
            <value>
                <fullName>Sage QA Thaw Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>