force-app/main/default/objects/Cycle_Event__c/fields/What_was_the_outcome_for_this_baby__c.field-meta.xml
<CustomField>
    <fullName>What_was_the_outcome_for_this_baby__c</fullName>
    <label>What was the outcome for this baby?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Baby_Outcome</valueSetName>
    </valueSet>
</CustomField>