force-app/main/default/objects/Cycle_Event__c/fields/What_was_the_sex_of_this_baby__c.field-meta.xml
<CustomField>
    <fullName>What_was_the_sex_of_this_baby__c</fullName>
    <label>What was the sex of this baby?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>