force-app/main/default/objects/Cycle_Event__c/fields/Witness_2__c.field-meta.xml
<CustomField>
    <fullName>Witness_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Witness 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_EventsuCAp</relationshipName>
    <type>Lookup</type>
</CustomField>