force-app/main/default/objects/Cycle_Event__c/fields/Witness__c.field-meta.xml
<CustomField>
    <fullName>Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Witness</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events2</relationshipName>
    <type>Lookup</type>
</CustomField>