force-app/main/default/objects/Cycle_Event__c/fields/Witness_Text__c.field-meta.xml
<CustomField>
    <fullName>Witness_Text__c</fullName>
    <formula>Witness__r.FirstName &amp;&quot; &quot;&amp;  Witness__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Witness</label>
    <type>Text</type>
</CustomField>