force-app/main/default/objects/Cycle_Event__c/fields/X3mL_Syringe_Lot__c.field-meta.xml
<CustomField>
    <fullName>X3mL_Syringe_Lot__c</fullName>
    <label>3mL Syringe Lot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>