force-app/main/default/objects/Cycle_Event__c/recordTypes/Adverse_Event.recordType-meta.xml
<RecordType>
    <fullName>Adverse_Event</fullName>
    <active>true</active>
    <label>Adverse Event</label>
</RecordType>