force-app/main/default/objects/Cycle_Event__c/recordTypes/Biopsy_Event.recordType-meta.xml
<RecordType>
    <fullName>Biopsy_Event</fullName>
    <active>true</active>
    <label>Biopsy Event</label>
</RecordType>