force-app/main/default/objects/Cycle_Event__c/recordTypes/Calcium_Activation.recordType-meta.xml
<RecordType>
    <fullName>Calcium_Activation</fullName>
    <active>true</active>
    <label>Calcium Activation</label>
</RecordType>