force-app/main/default/objects/Cycle_Event__c/recordTypes/Cell_Wash_Event.recordType-meta.xml
<RecordType>
    <fullName>Cell_Wash_Event</fullName>
    <active>true</active>
    <label>Cell Wash Event</label>
</RecordType>