force-app/main/default/objects/Cycle_Event__c/recordTypes/Change_Over.recordType-meta.xml
<RecordType>
    <fullName>Change_Over</fullName>
    <active>true</active>
    <label>Change Over</label>
</RecordType>