force-app/main/default/objects/Cycle_Event__c/recordTypes/Day_1_Change_Over.recordType-meta.xml
<RecordType>
    <fullName>Day_1_Change_Over</fullName>
    <active>true</active>
    <label>Day 1 Change Over</label>
</RecordType>