force-app/main/default/objects/Cycle_Event__c/recordTypes/Day_4_Embryo_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Day_4_Embryo_Assessment</fullName>
    <active>true</active>
    <label>Day 4 Embryo Assessment</label>
</RecordType>