force-app/main/default/objects/Cycle_Event__c/recordTypes/Day_5_Change_Over.recordType-meta.xml
<RecordType>
    <fullName>Day_5_Change_Over</fullName>
    <active>true</active>
    <label>Day 5 Change Over</label>
</RecordType>