force-app/main/default/objects/Cycle_Event__c/recordTypes/Denuding_Coc_Trimming.recordType-meta.xml
<RecordType>
    <fullName>Denuding_Coc_Trimming</fullName>
    <active>true</active>
    <label>Denuding/Coc Trimming</label>
</RecordType>