force-app/main/default/objects/Cycle_Event__c/recordTypes/Down_Reg_Start.recordType-meta.xml
<RecordType>
    <fullName>Down_Reg_Start</fullName>
    <active>true</active>
    <label>Down Reg Start</label>
</RecordType>