force-app/main/default/objects/Cycle_Event__c/recordTypes/Egg_Donation_Event.recordType-meta.xml
<RecordType>
    <fullName>Egg_Donation_Event</fullName>
    <active>true</active>
    <label>Egg Donation Event</label>
</RecordType>