force-app/main/default/objects/Cycle_Event__c/recordTypes/Egg_Insemination_Event.recordType-meta.xml
<RecordType>
    <fullName>Egg_Insemination_Event</fullName>
    <active>true</active>
    <label>Egg Insemination Event</label>
</RecordType>