force-app/main/default/objects/Cycle_Event__c/recordTypes/Egg_Vitrification_Event.recordType-meta.xml
<RecordType>
    <fullName>Egg_Vitrification_Event</fullName>
    <active>true</active>
    <label>Egg Vitrification Event</label>
</RecordType>