force-app/main/default/objects/Cycle_Event__c/recordTypes/Embryo_Thaw_Event.recordType-meta.xml
<RecordType>
    <fullName>Embryo_Thaw_Event</fullName>
    <active>true</active>
    <label>Embryo Thaw Event</label>
</RecordType>