force-app/main/default/objects/Cycle_Event__c/recordTypes/Embryo_Transfer_Event.recordType-meta.xml
<RecordType>
    <fullName>Embryo_Transfer_Event</fullName>
    <active>true</active>
    <label>Embryo Transfer Event</label>
</RecordType>