force-app/main/default/objects/Cycle_Event__c/recordTypes/Embryo_Vitrification_Event.recordType-meta.xml
<RecordType>
    <fullName>Embryo_Vitrification_Event</fullName>
    <active>true</active>
    <label>Embryo Vitrification Event</label>
</RecordType>