force-app/main/default/objects/Cycle_Event__c/recordTypes/Failed_Embryo_Transfer_Event.recordType-meta.xml
<RecordType>
    <fullName>Failed_Embryo_Transfer_Event</fullName>
    <active>true</active>
    <label>Failed Embryo Transfer Event</label>
</RecordType>