force-app/main/default/objects/Cycle_Event__c/recordTypes/Fert_Check.recordType-meta.xml
<RecordType>
    <fullName>Fert_Check</fullName>
    <active>true</active>
    <label>Fert Check</label>
</RecordType>