force-app/main/default/objects/Cycle_Event__c/recordTypes/Filgrastim_Infusion_Event.recordType-meta.xml
<RecordType>
    <fullName>Filgrastim_Infusion_Event</fullName>
    <active>true</active>
    <label>Filgrastim Infusion Event</label>
</RecordType>