force-app/main/default/objects/Cycle_Event__c/recordTypes/Follicle_Scan.recordType-meta.xml
<RecordType>
    <fullName>Follicle_Scan</fullName>
    <active>true</active>
    <label>Follicle Scan</label>
</RecordType>