force-app/main/default/objects/Cycle_Event__c/recordTypes/Glue_Move.recordType-meta.xml
<RecordType>
    <fullName>Glue_Move</fullName>
    <active>true</active>
    <label>Glue Move</label>
</RecordType>