force-app/main/default/objects/Cycle_Event__c/recordTypes/IUI_Event.recordType-meta.xml
<RecordType>
    <fullName>IUI_Event</fullName>
    <active>true</active>
    <label>IUI Event</label>
</RecordType>