force-app/main/default/objects/Cycle_Event__c/recordTypes/LAH_Event.recordType-meta.xml
<RecordType>
    <fullName>LAH_Event</fullName>
    <active>true</active>
    <label>LAH Event</label>
</RecordType>