force-app/main/default/objects/Cycle_Event__c/recordTypes/Live_Birth_Event.recordType-meta.xml
<RecordType>
    <fullName>Live_Birth_Event</fullName>
    <active>true</active>
    <label>Live Birth Event</label>
</RecordType>