force-app/main/default/objects/Cycle_Event__c/recordTypes/OPU_Event.recordType-meta.xml
<RecordType>
    <fullName>OPU_Event</fullName>
    <active>true</active>
    <label>OPU Event</label>
</RecordType>