force-app/main/default/objects/Cycle_Event__c/recordTypes/OPU_Prep_Event.recordType-meta.xml
<RecordType>
    <fullName>OPU_Prep_Event</fullName>
    <active>true</active>
    <label>OPU Prep Event</label>
</RecordType>