force-app/main/default/objects/Cycle_Event__c/recordTypes/Post_Thaw_Expansion_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Post_Thaw_Expansion_Assessment</fullName>
    <active>true</active>
    <label>Post Thaw Expansion Assessment</label>
</RecordType>