force-app/main/default/objects/Cycle_Event__c/recordTypes/Pregnancy_Scan.recordType-meta.xml
<RecordType>
    <fullName>Pregnancy_Scan</fullName>
    <active>true</active>
    <label>Pregnancy Scan</label>
</RecordType>