force-app/main/default/objects/Cycle_Event__c/recordTypes/PRP_Infusion_Event.recordType-meta.xml
<RecordType>
    <fullName>PRP_Infusion_Event</fullName>
    <active>true</active>
    <label>PRP Infusion Event</label>
</RecordType>