force-app/main/default/objects/Cycle_Event__c/recordTypes/PRP_Prep_Event.recordType-meta.xml
<RecordType>
    <fullName>PRP_Prep_Event</fullName>
    <active>true</active>
    <label>PRP Prep Event</label>
</RecordType>