force-app/main/default/objects/Cycle_Event__c/recordTypes/Semen_Freeze.recordType-meta.xml
<RecordType>
    <fullName>Semen_Freeze</fullName>
    <active>true</active>
    <label>Semen Freeze</label>
</RecordType>