force-app/main/default/objects/Cycle_Event__c/recordTypes/Semen_Prep.recordType-meta.xml
<RecordType>
    <fullName>Semen_Prep</fullName>
    <active>true</active>
    <label>Semen Prep</label>
</RecordType>