force-app/main/default/objects/Cycle_Event__c/recordTypes/Semen_Thaw.recordType-meta.xml
<RecordType>
    <fullName>Semen_Thaw</fullName>
    <active>true</active>
    <label>Semen Thaw</label>
</RecordType>