force-app/main/default/objects/Cycle_Event__c/recordTypes/Testicular_Biopsy.recordType-meta.xml
<RecordType>
    <fullName>Testicular_Biopsy</fullName>
    <active>true</active>
    <label>Testicular Biopsy</label>
</RecordType>