force-app/main/default/objects/Cycle_Event__c/recordTypes/Testicular_Biopsy_Event.recordType-meta.xml
<RecordType>
    <fullName>Testicular_Biopsy_Event</fullName>
    <active>true</active>
    <label>Testicular Biopsy Event</label>
</RecordType>