force-app/main/default/objects/Cycle_Event__c/recordTypes/Trigger.recordType-meta.xml
<RecordType>
    <fullName>Trigger</fullName>
    <active>true</active>
    <label>Trigger</label>
</RecordType>