force-app/main/default/objects/Cycle_Event__c/listViews/All_Cycle_Evenst.listView-meta.xml
<ListView>
    <fullName>All_Cycle_Evenst</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Doctor__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cycle_Event__c.OPU_Event</value>
    </filters>
    <label>All OPU Eevent</label>
</ListView>