force-app/main/default/objects/Cycle_Event__c/listViews/All_Cycle_Events.listView-meta.xml
<ListView>
    <fullName>All_Cycle_Events</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Cycle Events</label>
</ListView>